--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    font-family: 'Poppins', sans-serif;
     margin: 0;
 }
 
@@ -10,36 +11,90 @@ h1 {
     font-size: 50px;
 }
 
-section {
-    display: flex;
+h2 {
+    font-size: 40px;
 }
 
-.part1 {
+.flexible-container {
+    display: flex;
+    margin-bottom: 100px;
+    margin-left: 40px;
+
+}
+
+.half-width {
     width: 50%;
     padding-left: 30px;
+    padding-bottom: 50px;
 }
 
-.part2 {
-    width: 50%;
-}
-
-.part2 img {
+.half-width img {
     width: 85%;
     padding-top: 50px;
     text-align: right;
 }
 
-.hire-btn {
+.half-width h3 {
+    color: orange;
+
+}
+
+.link-btn {
     color: white;
     text-decoration: none;
-    background-image: linear-gradient(orange, tomato);
+    background-image: linear-gradient(lightsalmon, tomato);
     padding: 10px 30px;
     font-weight: 700;
     border-radius: 5px;
 
 }
 
+
 .banner {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
 }
+
+.dream-big {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+
+.cart-box {
+    width: 40%;
+    margin: 0 2%;
+    margin-top: 10px;
+    padding-right: 30px;
+    box-shadow: 5px 7px 40px gray;
+    height: 350px;
+}
+
+.experiences-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    margin-bottom: 250px;
+    text-align: center;
+}
+
+#Full-stack-experience {
+    border-left: 7px solid;
+    border-image: linear-gradient(purple, lightsalmon);
+    border-image-slice: 1;
+    border-radius: 10px;
+}
+
+#Baby-stack-experience {
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+    border-radius: 10px;
+}
+
+footer p {
+    text-align: center;
+}
+
+
+/*  */
